Update plugin on sbt-native-packager